--- a/dental.html
+++ b/dental.html
@@ -137,6 +137,8 @@
                                 well-being. Our dental department is committed to delivering personalized and
                                 comprehensive dental care that addresses both your oral health needs and your individual
                                 preferences.</p>
+                            <p>( Get a free dental checkup <a href="/index.html" style="color: #e51f25;">here...</a> )
+                            </p>
 
 
                             <h2><u style="color: #e51f25;">Services We Offer :</u></h2>
@@ -169,6 +171,8 @@
                                 ensures that children have a positive dental experience while receiving essential
                                 preventive and restorative care.
                             </p>
+                            <p>( Get a free dental checkup <a href="/index.html" style="color: #e51f25;">here...</a> )
+                            </p>
 
                             <h2><u style="color: #e51f25;">Comfort and Technology :</u></h2>
                             <p>Vraj Hospital's Dental Department is equipped with modern technology and comfortable
@@ -190,6 +194,8 @@
                                 enhancements, Vraj Hospital's Dental Department is dedicated to helping you achieve and
                                 maintain a healthy, beautiful smile. We are committed to providing a positive and
                                 stress-free dental experience for every patient.</p>
+                            <p>( Get a free dental checkup <a href="/index.html" style="color: #e51f25;">here...</a> )
+                            </p>
                         </div>
 
                     </div>
@@ -309,8 +315,8 @@
                 <div class="ab-container two-column">
                     <p>© 2023 Vraj Hospital, All Rights Reserved.</p>
                     <p>
-                        Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency.html"
-                            target="_blank"> FITIT
+                        Designed by <a style="color: #387DFF;"
+                            href="https://gcsconsultant.com/digital-marketing-agency.html" target="_blank"> FITIT
                             Official</a>
                     </p>
                 </div>
