--- a/gynaecology.html
+++ b/gynaecology.html
@@ -138,6 +138,8 @@
                                 understands the sensitive and personal nature of women's healthcare, and we are
                                 dedicated to providing personalized, patient-centered care in a supportive and
                                 respectful environment.</p>
+                            <p>( For IVF & Fertility treatment click <a href="/index.html"
+                                    style="color: #e51f25;">here...</a> )</p>
 
 
                             <h2><u style="color: #e51f25;">Services We Offer :</u></h2>
@@ -170,11 +172,15 @@
                                 variety of gynecological conditions, including menstrual disorders, pelvic pain,
                                 endometriosis, polycystic ovary syndrome (PCOS), and more.
                             </p>
+                            <p>( For IVF & Fertility treatment click <a href="/index.html"
+                                    style="color: #e51f25;">here...</a> )</p>
 
                             <h2><u style="color: #e51f25;">Compassionate Care & Empowering Women :</u></h2>
                             <p>At Vraj Hospital, we believe in empowering women to make informed decisions about their
                                 health. Our gynecologists take the time to listen, educate, and collaborate with you to
                                 create a personalized treatment plan that aligns with your needs and goals.</p>
+                            <p>( For IVF & Fertility treatment click <a href="/index.html"
+                                    style="color: #e51f25;">here...</a> )</p>
 
 
                             <h2><u style="color: #e51f25;">State-of-the-Art Facilities :</u></h2>
@@ -182,6 +188,8 @@
                             <p>Vraj Hospital is equipped with modern, state-of-the-art facilities to ensure the highest
                                 level of care for our patients. Our advanced diagnostic and imaging technologies enable
                                 us to provide accurate assessments and timely interventions.</p>
+                            <p>( For IVF & Fertility treatment click <a href="/index.html"
+                                    style="color: #e51f25;">here...</a> )</p>
 
                             <h2><u style="color: #e51f25;">Your Partner in Women's Health :</u></h2>
                             <p>Whether you're seeking routine gynecological care, family planning guidance, or
@@ -189,6 +197,8 @@
                                 support you. We are committed to providing comprehensive, compassionate, and
                                 confidential care that promotes your well-being and empowers you to take control of your
                                 health.</p>
+                            <p>( For IVF & Fertility treatment click <a href="/index.html"
+                                    style="color: #e51f25;">here...</a> )</p>
                         </div>
 
                     </div>
