--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                 var name = document.getElementById("Name").value.trim();
                 var sender = document.getElementById("Sender").value.trim();
                 var mobile = document.getElementById("Mobile").value.trim();
-                var message = document.getElementById("message").value.trim();
+                var message = document.getElementById("Message").value.trim();
 
                 if (!name || !sender || !mobile || !message) {
                     Swal.fire({
